--- a/miniprojetoantoniosousa/src/app/globals.css
+++ b/miniprojetoantoniosousa/src/app/globals.css
@@ -10,18 +10,35 @@
   }
 }
 
+/* Configurações básicas para manter a página sem rolagem horizontal */
 html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
+  height: 100%;
 }
 
 body {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
   color: var(--foreground);
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+/* Flex-grow para o conteúdo principal */
+#__next {
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
+}
+
+/* Faz o conteúdo principal ocupar o espaço necessário */
+main {
+  flex-grow: 1;
 }
 
 * {
@@ -30,13 +47,16 @@ body {
   margin: 0;
 }
 
+/* Links herdam a cor e removem sublinhado */
 a {
   color: inherit;
   text-decoration: none;
 }
 
+/* Ajustes para dark mode */
 @media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
   }
 }
+
